Bug 392029 - Clicking on Defaults does not change values in Wayland session
Summary: Clicking on Defaults does not change values in Wayland session
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_touchpad (other bugs)
Version First Reported In: 5.17.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-18 23:00 UTC by Roman Gilg
Modified: 2020-01-22 21:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2018-03-18 23:00:08 UTC
The UI does not update when clicking on Defaults in Wayland session.
Comment 1 Roman Gilg 2018-03-19 09:35:51 UTC
Git commit bac84005811927891bc1dcaf1b8f68123ea7dccc by Roman Gilg.
Committed on 19/03/2018 at 09:34.
Pushed by romangilg into branch 'Plasma/5.12'.

[Touchpad KCM] Sync values to UI on Defaults in Wayland session

Summary:
On Defaults the updated values need to be resynced to the QML part.
Otherwise the UI is not updated.

Test Plan: Manually tested in Wayland session.

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D11471

M  +2    -0    kcms/touchpad/src/kcm/libinput/touchpadconfiglibinput.cpp

https://commits.kde.org/plasma-desktop/bac84005811927891bc1dcaf1b8f68123ea7dccc