[Touchpad KCM] Sync values to UI on Defaults in Wayland session

Summary:
On Defaults the updated values need to be resynced to the QML part.
Otherwise the UI is not updated.

BUG: 392029

Test Plan: Manually tested in Wayland session.

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D11471